--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ twilight-embed-builder = "0.2.0"
 twilight-gateway = "0.2.5"
 twilight-http = "0.2.5"
 twilight-model = "0.2.4"
+simplelog = "0.8.0"
