--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,16 +7,17 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.35"
 cached = "0.22.0"
+chrono = { version = "0.4.19", features = ["serde"] }
+config = "0.10.1"
 cookie = "0.14.3"
 dotenv = "0.15.0"
+log = "0.4.11"
 reqwest = { version = "0.10.9", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1.0.118", features = ["derive"] }
+simplelog = "0.8.0"
 tokio = { version = "0.2.23", features = ["macros"] }
 twilight-cache-inmemory = "0.2.3"
 twilight-embed-builder = "0.2.0"
 twilight-gateway = "0.2.5"
 twilight-http = "0.2.5"
 twilight-model = "0.2.4"
-simplelog = "0.8.0"
-log = "0.4.11"
-config = "0.10.1"
