--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.35"
 cached = "0.22.0"
-chrono = { version = "0.4.19", features = ["serde"] }
 cookie = "0.14.3"
 dotenv = "0.15.0"
 log = "0.4.11"
@@ -21,3 +20,5 @@ twilight-embed-builder = "0.2.0"
 twilight-gateway = "0.2.5"
 twilight-http = "0.2.5"
 twilight-model = "0.2.4"
+chrono = "0.4.19"
+chrono-humanize = "0.1.1"
