Complete current cron scheduler

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.43"
 cached = "0.26.2"
-cron = "0.9.0"
 chrono = "0.4.19"
 chrono-humanize = "0.2.1"
 cookie = "0.15.1"
+cron = "0.9.0"
 dotenv = "0.15.0"
 futures-util = "0.3.16"
+humantime = "2.1.0"
 log = "0.4.14"
 reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls"] }
 serde = { version = "1.0.129", features = ["derive"] }
