--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,13 +18,13 @@ dotenv = "0.15.0"
 futures-util = "0.3.18"
 humantime = "2.1.0"
 log = "0.4.14"
-reqwest = { version = "0.11.6", default-features = false, features = ["json", "rustls-tls"] }
+reqwest = { version = "0.11.6", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
 serde = { version = "1.0.130", features = ["derive"] }
 simplelog = "0.11.0"
 tokio = { version = "1.14.0", features = ["fs", "macros", "rt-multi-thread", "signal"] }
 toml = "0.5.8"
 twilight-cache-inmemory = "0.7.2"
 twilight-embed-builder = "0.7.1"
-twilight-gateway = "0.7.1"
-twilight-http = "0.7.2"
+twilight-gateway = { version = "0.7.1", default-features = false, features = ["rustls-webpki-roots", "zlib-stock"] }
+twilight-http = { version = "0.7.2", default-features = false, features = ["decompression", "rustls-webpki-roots"] }
 twilight-model = "0.7.2"
