--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -7,6 +7,10 @@ jobs:
   docs:
     name: Docs
     runs-on: ubuntu-latest
+    environment: Docs
+    concurrency:
+      group: Docs
+      cancel-in-progress: true
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
