--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ license = "AGPL-3.0-only"
 [dependencies]
 anyhow = "1.0.49"
 cached = "0.26.2"
-chrono = "0.4.19"
+chrono = { version = "0.4.19", features = ["serde"] }
 chrono-humanize = "0.2.1"
 cron = "0.9.0"
 dotenv = "0.15.0"
