--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,12 +17,13 @@ cron = "0.11.0"
 dotenv = "0.15.0"
 futures-util = "0.3.21"
 humantime = "2.1.0"
-log = "0.4.17"
 reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
 serde = { version = "1.0.137", features = ["derive"] }
-simplelog = "0.12.0"
 tokio = { version = "1.19.2", features = ["fs", "macros", "rt-multi-thread", "signal"] }
 toml = "0.5.9"
+tracing = "0.1.35"
+tracing-appender = "0.2.2"
+tracing-subscriber = "0.3.11"
 twilight-cache-inmemory = "0.11.0"
 twilight-gateway = { version = "0.11.0", default-features = false, features = ["rustls-webpki-roots", "zlib-stock"] }
 twilight-http = { version = "0.11.0", default-features = false, features = ["decompression", "rustls-webpki-roots"] }
